--- a/css/lg.css
+++ b/css/lg.css
@@ -11,6 +11,9 @@ nav a {
     color: #323031;
     padding: 1rem;
     text-decoration: none;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
 }
 
 nav a:hover {
