--- a/css/lg.css
+++ b/css/lg.css
@@ -16,6 +16,11 @@ nav a {
     transition-timing-function: ease-in-out;
 }
 
+nav a:last-child {
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+
 nav a:hover {
     background-color: #E3EDF2;
 }
