Adding the main index page content

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,14 @@ generated using https://coolors.co/
 /* We use @import to import the right stylesheet based on which shape it is */
 
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@500&display=swap');
-@import "sm.css" screen and (max-width: 480px);
-@import "lg.css" screen and (min-width: 480px);
+@import "sm.css" screen and (max-width: 800px);
+@import "lg.css" screen and (min-width: 800px);
 body {
     background-size: cover;
     background-color: #323031;
     font-family: 'Red Hat Mono', monospace;
+}
+
+.text-highlight {
+    color: #6F58C9;
 }
