text-highlight now animated

--- a/css/style.css
+++ b/css/style.css
@@ -25,4 +25,17 @@ body {
 
 .text-highlight {
     color: #6F58C9;
+    animation: highlight 8s linear 0ms infinite both;
+}
+
+@keyframes highlight {
+    from {
+        color: #6F58C9;
+    }
+    50% {
+        color: #4618ff;
+    }
+    to {
+        color: #6F58C9;
+    }
 }
