--- a/css/lg.css
+++ b/css/lg.css
@@ -63,3 +63,59 @@ nav a:hover {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 0.4fr);
 }
+
+.portfolio-image-right {
+    width: 300px;
+    height: 300px;
+    grid-column-start: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.portfolio-title-left {
+    color: #b5bec6;
+    font-size: 3rem;
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.portfolio-description-left {
+    color: #b5bec6;
+    font-size: 1.5rem;
+    grid-row-start: 2;
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.portfolio-image-left {
+    width: 300px;
+    height: 300px;
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.portfolio-title-right {
+    color: #b5bec6;
+    font-size: 3rem;
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+
+.portfolio-description-right {
+    color: #b5bec6;
+    font-size: 1.5rem;
+    grid-row-start: 2;
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+
+.portfolio-grid-container {
+    margin-top: 4rem;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(5, 0.7fr);
+    grid-template-rows: repeat(3, 0.5fr);
+}
