--- a/css/lg.css
+++ b/css/lg.css
@@ -214,3 +214,17 @@ fieldset {
 legend {
     font-size: x-large;
 }
+
+article {
+    color: #E3EDF2;
+    width: min(600px, 80%);
+    margin-left: auto;
+    margin-right: auto;
+    border: #E3EDF2 2px solid;
+    border-radius: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-top: 1rem;
+}
