--- a/css/lg.css
+++ b/css/lg.css
@@ -20,7 +20,7 @@ nav a:hover {
     background-color: #E3EDF2;
 }
 
-#lastlink {
+nav a:last-child {
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
 }
