--- a/css/lg.css
+++ b/css/lg.css
@@ -222,7 +222,6 @@ legend {
 
 article {
     color: #E3EDF2;
-    width: min(600px, 80%);
     margin-left: auto;
     margin-right: auto;
     border: #E3EDF2 2px solid;
@@ -232,4 +231,44 @@ article {
     padding-top: 1rem;
     padding-bottom: 1rem;
     margin-top: 1rem;
+}
+
+#sr {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 3;
+    gap: 20px;
+}
+
+#my-report {
+    display: grid;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 1;
+}
+
+#navbar-image {
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+
+#animation-code {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+#validation-code {
+    grid-row-start: 2;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 1;
+}
+
+.code-image {
+    width: min(25vw, 500px);
 }
