--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,13 @@ body {
         color: #6F58C9;
     }
 }
+
+kbd {
+    background-color: gainsboro;
+    color: black;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    padding-bottom: 0.05rem;
+    padding-top: 0.05rem;
+    border-radius: 3px;
+}
